--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Build app
+      run: npm run build
+    - name: Serve dist/ on port 5173
+      run: npx vite preview --port 5173 &
     - name: Run Playwright tests
       run: npm run e2e
     - uses: actions/upload-artifact@v4
